// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checks for invalid password 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
  >
    <div>
      To protect against unauthorized changes to your account,
we require users to create a password.
    </div>
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="password"
      >
        Password
      </label>
      <div
        className="InputDescription-root"
      >
        Must be at least 8 characters
      </div>
      <div
        className="PasswordField-fullWidth PasswordField-root"
      >
        <div
          className="PasswordField-wrapper"
        >
          <input
            className="PasswordField-colorError PasswordField-fullWidth PasswordField-input"
            data-testid="password-field"
            disabled={false}
            id="password"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Password"
            type="password"
            value="x"
          />
          <div
            className="PasswordField-icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            role="button"
            tabIndex={0}
            title="Show password"
          >
            <i
              aria-hidden="true"
              className="Icon-root Icon-sm coral coral-icon"
            >
              visibility
            </i>
          </div>
        </div>
      </div>
      <div
        className="Message-root Message-colorError Message-fullWidth"
      >
        <i
          aria-hidden="true"
          className="Icon-root Icon-sm coral coral-icon MessageIcon-root"
        >
          warning
        </i>
        <span>
          Password must contain at least 8 characters.
        </span>
      </div>
    </div>
    <button
      className="BaseButton-root Button-root Button-sizeLarge Button-colorRegular Button-variantRegular Button-uppercase Button-fullWidth"
      data-variant="regular"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      Create Password
    </button>
  </div>
</form>
`;

exports[`renders createPassword view 1`] = `
<div
  className="coral-width-gt-xs coral-width-gte-xs coral-width-gt-mobile coral-width-gte-mobile coral-width-gt-mobileMax coral-width-gte-mobileMax coral-width-gt-sm coral-width-gte-sm coral-width-gte-md coral-width-lte-md coral-width-lt-lg coral-width-lte-lg coral-width-lt-xl coral-width-lte-xl"
  id="coral"
>
  <div>
    <div
      data-testid="completeAccountBox"
    >
      <div
        className="Box-root Flex-root Flex-flex Flex-justifyCenter"
      >
        <div
          className="CompleteAccountBox-container"
        >
          <div
            className="CompleteAccountBox-header"
          >
            <div
              className="CompleteAccountBox-heading3"
            >
              Finish Setting Up Your Account
            </div>
            <div
              className="CompleteAccountBox-title"
            >
              <span>
                Create Password
              </span>
            </div>
          </div>
          <div
            className="CompleteAccountBox-main"
          >
            <div>
              <form
                autoComplete="off"
                onSubmit={[Function]}
              >
                <div
                  className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
                >
                  <div>
                    To protect against unauthorized changes to your account,
we require users to create a password.
                  </div>
                  <div
                    className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
                  >
                    <label
                      className="InputLabel-root"
                      htmlFor="password"
                    >
                      Password
                    </label>
                    <div
                      className="InputDescription-root"
                    >
                      Must be at least 8 characters
                    </div>
                    <div
                      className="PasswordField-fullWidth PasswordField-root"
                    >
                      <div
                        className="PasswordField-wrapper"
                      >
                        <input
                          className="PasswordField-colorRegular PasswordField-fullWidth PasswordField-input"
                          data-testid="password-field"
                          disabled={false}
                          id="password"
                          name="password"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          placeholder="Password"
                          type="password"
                          value=""
                        />
                        <div
                          className="PasswordField-icon"
                          onClick={[Function]}
                          onKeyUp={[Function]}
                          role="button"
                          tabIndex={0}
                          title="Show password"
                        >
                          <i
                            aria-hidden="true"
                            className="Icon-root Icon-sm coral coral-icon"
                          >
                            visibility
                          </i>
                        </div>
                      </div>
                    </div>
                  </div>
                  <button
                    className="BaseButton-root Button-root Button-sizeLarge Button-colorRegular Button-variantRegular Button-uppercase Button-fullWidth"
                    data-variant="regular"
                    disabled={false}
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="submit"
                  >
                    Create Password
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`shows error when submitting empty form 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
  >
    <div>
      To protect against unauthorized changes to your account,
we require users to create a password.
    </div>
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="password"
      >
        Password
      </label>
      <div
        className="InputDescription-root"
      >
        Must be at least 8 characters
      </div>
      <div
        className="PasswordField-fullWidth PasswordField-root"
      >
        <div
          className="PasswordField-wrapper"
        >
          <input
            className="PasswordField-colorError PasswordField-fullWidth PasswordField-input"
            data-testid="password-field"
            disabled={false}
            id="password"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Password"
            type="password"
            value=""
          />
          <div
            className="PasswordField-icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            role="button"
            tabIndex={0}
            title="Show password"
          >
            <i
              aria-hidden="true"
              className="Icon-root Icon-sm coral coral-icon"
            >
              visibility
            </i>
          </div>
        </div>
      </div>
      <div
        className="Message-root Message-colorError Message-fullWidth"
      >
        <i
          aria-hidden="true"
          className="Icon-root Icon-sm coral coral-icon MessageIcon-root"
        >
          warning
        </i>
        <span>
          This field is required.
        </span>
      </div>
    </div>
    <button
      className="BaseButton-root Button-root Button-sizeLarge Button-colorRegular Button-variantRegular Button-uppercase Button-fullWidth"
      data-variant="regular"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      Create Password
    </button>
  </div>
</form>
`;

exports[`shows server error 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
  >
    <div>
      To protect against unauthorized changes to your account,
we require users to create a password.
    </div>
    <div
      className="CallOut-root CallOut-colorError CallOut-fullWidth"
    >
      <div
        className="CallOut-inner"
      >
        server error

GraphQL request:4:3
3 | ) {
4 |   setPassword(input: $input) {
  |   ^
5 |     user {
      </div>
    </div>
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="password"
      >
        Password
      </label>
      <div
        className="InputDescription-root"
      >
        Must be at least 8 characters
      </div>
      <div
        className="PasswordField-fullWidth PasswordField-root"
      >
        <div
          className="PasswordField-wrapper"
        >
          <input
            className="PasswordField-colorRegular PasswordField-fullWidth PasswordField-input"
            data-testid="password-field"
            disabled={false}
            id="password"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Password"
            type="password"
            value="secretpassword"
          />
          <div
            className="PasswordField-icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            role="button"
            tabIndex={0}
            title="Show password"
          >
            <i
              aria-hidden="true"
              className="Icon-root Icon-sm coral coral-icon"
            >
              visibility
            </i>
          </div>
        </div>
      </div>
    </div>
    <button
      className="BaseButton-root Button-root Button-sizeLarge Button-colorRegular Button-variantRegular Button-uppercase Button-fullWidth"
      data-variant="regular"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      Create Password
    </button>
  </div>
</form>
`;

exports[`successfully sets password 1`] = `
<form
  autoComplete="off"
  onSubmit={[Function]}
>
  <div
    className="Box-root HorizontalGutter-root HorizontalGutter-oneAndAHalf"
  >
    <div>
      To protect against unauthorized changes to your account,
we require users to create a password.
    </div>
    <div
      className="Box-root HorizontalGutter-root FormField-root HorizontalGutter-spacing-2"
    >
      <label
        className="InputLabel-root"
        htmlFor="password"
      >
        Password
      </label>
      <div
        className="InputDescription-root"
      >
        Must be at least 8 characters
      </div>
      <div
        className="PasswordField-fullWidth PasswordField-root"
      >
        <div
          className="PasswordField-wrapper"
        >
          <input
            className="PasswordField-colorRegular PasswordField-fullWidth PasswordField-input"
            data-testid="password-field"
            disabled={false}
            id="password"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Password"
            type="password"
            value="secretpassword"
          />
          <div
            className="PasswordField-icon"
            onClick={[Function]}
            onKeyUp={[Function]}
            role="button"
            tabIndex={0}
            title="Show password"
          >
            <i
              aria-hidden="true"
              className="Icon-root Icon-sm coral coral-icon"
            >
              visibility
            </i>
          </div>
        </div>
      </div>
    </div>
    <button
      className="BaseButton-root Button-root Button-sizeLarge Button-colorRegular Button-variantRegular Button-uppercase Button-fullWidth"
      data-variant="regular"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      type="submit"
    >
      Create Password
    </button>
  </div>
</form>
`;
